public/stylesheets/app.css
/* ... */
h3 {
	color: #ee2524;
	font-size: 1.75em;
	font-family: "Francois One", sans-serif;
	letter-spacing: 1px;
	line-height: 1em;
	font-weight: 300;
}

.title-card {
	padding: 0.5em 0.5em;
	margin-bottom: 0.5em;
	max-width: 500px;
	border: 3px solid #ee2524;
}

h4 {
	font-size: 1.25em;
	margin: 1em 0 0 0;
}

h5 {
	font-size: 1em;
	margin: 1em 0;
}

ul {
	text-align: left;
}
ul li {
	list-style: square;
}

/* 	////////////////////////////////////////////
	HEADER - Logo, name, title, and nav
	////////////////////////////////////////////	*/

.header {
	grid-area: header;
	display: flex;
	justify-content: center;
	background-color: #a02828;
	background-image: url(/images/Chalkboard_small.jpg);
	background-repeat: repeat;
	background-size: contain;
	background-attachment: fixed;
	background-position: center;
	border-bottom: 1px solid #850606;
	box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.35);
	padding: 2em 0 5em 0;
	-webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
	clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
}

.signature {
	width: 100px;
	height: 100px;
	margin: 1em;
}

/* 	////////////////////////////////////////////
	MAIN - main body content organization in grid
	////////////////////////////////////////////	*/

.grid {
	position: absolute;
	top: 50px;
	width: 100%;
	min-height: 100%;
}

.main {
	grid-area: main;
	min-height: 100%;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: auto;
}

.section-header {
	width: 175px;
	margin: 100px auto 1.25em auto;
}

.project-header {
	width: 265;
	margin: 100px auto 1.25em auto;
}

#projects, #resume, #about, #reviews {
	grid-column: 1 / span 3;
}

#projects {
	width: 100%;
	margin-top: -75px;
	padding: 0 0 75px 0;
	z-index: -1;
	-webkit-clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%);
	clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%);
}

.casino-bg {
	background-image: url(/images/casino.jpg);
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	background-attachment: fixed;
}

#resume, #reviews {
	max-width: 1410px;
	margin: 0 auto;
	overflow: hidden;
	border-radius: 20px;
}

 #reviews {
	 max-width: 1600px;
 }

.btn-normal {
	color: #8d2f2f;
	margin-top: 1em;
	padding: 0.5em 2em ;
	text-decoration: none;
	background: linear-gradient(white, white, white, lightgrey, darkgrey);
	font-family: "Francois One", sans-serif;
	font-weight: 500;
	font-size: 1em;
	letter-spacing: 0;
	border-radius: 7px;
	border: 1px solid white;
	box-shadow: 0 0 1px 1px rgba(0, 0, 0, 1),
				0 0 10px rgba(0, 0, 0, 0.25);
}

.btn-normal p {
	margin: 0 5px;
}

.btn-normal:hover {
	color: white;
	background: linear-gradient(lightgrey, lightgrey, lightgrey, darkgrey, grey);
	border: 1px solid darkgrey;
	
}

.btn-normal:active {
    color: black;
    border-color: #ad9c9c;
    background: linear-gradient(darkgrey, darkgrey, darkgrey, grey, #555);
}

/* 	////////////////////////////////////////////
	PROJECTS SECTION - 1 main project, 2 - 3 sub projects
	////////////////////////////////////////////	*/ 

.proj-main {
	height: 600px;
}

.proj-sub {
	height: 400px;
	align-content: center;
	padding: 1.5em;
	min-width: 290px;
}

.section-card {
	grid-column: 1 / span 3;
	margin: 0 auto;
	border-radius: 20px;
	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.35);
	width: 90%;
	max-width: 1410px;
	overflow: hidden;
}

.project-img {
	width: 350px;
	height: auto;
}

/* 	////////////////////////////////////////////
	RESUME SECTIONS - languages/software/education & companies
	////////////////////////////////////////////	*/ 

#lang-soft-edu {
	padding: 0 10% 125px 10%;
	background-image: url(/images/Chalkboard_small.jpg);
	background-repeat: repeat;
	background-size: contain;
	background-attachment: fixed;
	margin: -42px 0 50px 0;
	z-index: -1;
	-webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
	clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
}

#lang-soft-edu h4,{
	color: white;
	margin-top: 1.5em;
}

.icon-circle {
	display: inline-block;
	border-radius: 50%;
	padding: 2.5em;
	background-color: #999;
	margin: 75px auto 0 auto;
}

.icon-circle i {
	color: #222;
	font-size: 2em;
}

.company-logo-wrap {
	border-radius: 50%;
	display: inline;
	background-color: white;
	margin: 0 auto;
	overflow: hidden;
}

.company-logo-double {
	justify-content: center;
}

.company-logo-double i {
	font-size: 2.5em;
	align-self: center;
	margin: 10px;
}

.company-logo {
	width: 100px;
	height: 100px;
	margin: 20px 10px 0 10px;
}

.company {
	justify-content: space-between;
	background-color: #c8aaaa;
	box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.5);
}

.light-background {
	background-color: #f1ebee;
	color: #2d292b;
}

.med-background {
	background-color: #ddd7da;
}

.dark-background {
	background-color: #c6bcc1;
}

.company-section, .brief-section {
	padding: 2em;
	margin: 0;
	justify-content: start;
}

.company-title-section {
	max-width: 200px;
}

.company-img {
	background-color: #a97e7e;
	min-width: 225px;
}

.company-proj {
	min-width: 225px;
	min-height: 225px;
}

.most-recent-company {
	margin-top: -55px;
}

.store-badge {
	width: auto;
	height: 40px;
	padding: 0 4px;
}

.store-badge-wrap {
	justify-content: center;
	margin: 10px 0;
}

.btn-badge {
	color: white;
	background-color: black;
	border-radius: 10px;
	border: 1px solid lightgrey;
	padding: 0.2em 0.5em;
	text-decoration: none;
}

.btn-badge-first-p {
	font-size: 0.55em;
}

.btn-badge i {
	font-size: 1.25em;
	display: inline;
}

.btn-badge p {
	margin: 0 0 0 0.5em;
	align-self: center;
}

.banner {
	display: flex;
	align-content: center;
	justify-content: center;
	min-height: 50px;
	text-align: center;
	padding: 0.5em 0 1.5em 0;
}

.banner-tilt {
	-webkit-clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 50%);
	clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 50%)
}

.border-top {
	border-top: 1px solid rgba(0, 0, 0, 0.25);
}

.dark-red {
	color: #dbc5c5;
	background-color: #8c1919;
}
/* ... */

